<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StoreActivity">

    <include
        android:id="@+id/apptoolbar"
        layout="@layout/toolbar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <com.budiyev.android.codescanner.CodeScannerView
            android:id="@+id/scanner_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            app:autoFocusButtonColor="@android:color/white"
            app:autoFocusButtonVisible="true"
            app:flashButtonColor="@android:color/white"
            app:flashButtonVisible="true"
            app:frameColor="@android:color/white"
            app:frameCornersSize="50dp"
            app:frameCornersRadius="0dp"
            app:frameAspectRatioWidth="1"
            app:frameAspectRatioHeight="1"
            app:frameSize="0.75"
            app:frameThickness="2dp"
            android:visibility="gone"
            app:maskColor="#77000000"/>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/_150sdp">

        <androidx.camera.view.PreviewView
            android:id="@+id/cameraPreviewView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startTextRecog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_110sdp"
        android:text="@string/strCaptureText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_110sdp"
        android:layout_alignParentEnd="true"
        android:id="@+id/endTextRecog"
        android:visibility="gone"
        android:text="Stop"

        />
</RelativeLayout>
        <TextView
            android:id="@+id/tvPBarcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text16spblack"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:hint="@string/str_product_barcode"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <AutoCompleteTextView
            android:id="@+id/atvPName"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/text16spblack"
            android:inputType="text"
            android:layout_marginTop="5dp"
            android:hint="@string/str_product_name"
            />

            <tech.hibk.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/sspProduct"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:visibility="gone"
                app:dialogTitle="@string/str_product_name"
                app:cancelButtonColor="@color/primary2"
                app:cancelButtontext="CLOSE"
                app:onlyLightTheme="false"
                app:nothingSelectedText="@string/str_product_name"/>

            <EditText
                android:id="@+id/etProductPrice"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_30sdp"
                style="@style/text16spblack"
                android:layout_marginTop="10dp"
                android:hint="@string/strProductPrice"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/etMfgDate"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:focusableInTouchMode="false"
                android:layout_height="wrap_content"
                style="@style/text16spblack"
                android:inputType="none"
                android:layout_marginTop="5dp"
                android:hint="@string/strProductMfgDate"
                />

            <EditText
                android:id="@+id/etExpDate"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/text16spblack"
                android:inputType="none"
                android:focusableInTouchMode="false"
                android:layout_marginTop="5dp"
                android:hint="@string/strProductExpDate"
                />
            <EditText
                android:id="@+id/etPQuant"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                style="@style/text16spblack"
                android:inputType="number"
                android:layout_marginTop="5dp"
                android:hint="@string/strProductQuantity"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btnAddStore"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            style="@style/text20spblack"
            android:textColor="@color/white"
            android:text="@string/strAdd"
            android:layout_marginTop="20dp"
            android:gravity="center"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvStoreDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:layout_marginTop="@dimen/_5sdp"
            />

    </LinearLayout>

</LinearLayout>